--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "chalk": "^4.1.1",
     "console.table": "^0.10.0",
+    "figlet": "^1.5.0",
     "inquirer": "^8.1.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5"
